United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6637203 Classunloading messages go to stdout rather than Xloggc file, causing hangs when stdout is closed
6637203 : Classunloading messages go to stdout rather than Xloggc file, causing hangs when stdout is closed

Details
Type:
Bug
Submit Date:
2007-12-04
Status:
Closed
Updated Date:
2011-04-28
Project Name:
JDK
Resolved Date:
2011-03-07
Component:
hotspot
OS:
solaris_10,windows_xp
Sub-Component:
gc
CPU:
x86,sparc
Priority:
P2
Resolution:
Fixed
Affected Versions:
hs10,1.4.2_11
Fixed Versions:
hs17

Related Reports
Backport:
Backport:
Relates:

Sub Tasks

Description
6.0U4 with Xloggc:file, CMS and CMSclassunloading.
The class unloading messages go to stdout rather than the 
GC logfile: [Unloading class .....]
Synopsis line changed from:-

"Classunloading messages of CMS go to stdout rather than Xloggc file"

to:-

"Classunloading messages go to stdout rather than Xloggc file, causing hangs when stdout is closed"

better reflecting the issue that the customer is concerned about,
and so as not to give one the misimpression that this was an
issue limited to the CMS collector (which it is not).

                                    

Comments
EVALUATION

This changeset missed one "coupling" -- -Xloggc enables TraceClassUnloading --
which should also have been removed at that time and was missed. That is
fixed in 7040410.
                                     
2011-04-28
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot/hotspot/rev/75bd253e25dd
                                     
2010-01-09
EVALUATION

The change in behaviour might need to be explicitly release-noted for the JDK
release in which this change first appears.
                                     
2010-01-06
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/75bd253e25dd
                                     
2010-01-05
SUGGESTED FIX

http://analemma.sfbay.sun.com/net/spot/workspaces/ysr/class_unload/webrev/
                                     
2010-01-03
WORK AROUND

-XX:-TraceClassUnloading as last JVM option.
                                     
2010-01-03
EVALUATION

Decouple TraceClassUnloading from PrintGC[Details] and -verbose:gc.
                                     
2010-01-03



Hardware and Software, Engineered to Work Together